# SemantisedTriangleMesh

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DataStructures/: CMakeLists.txt
DataStructures/include/: arc.hpp  graph.hpp  node.hpp  tree.hpp
DataStructures/src/: testGraph.cpp  testTree.cpp
KDTree/: CMakeLists.txt  KDTree.cpp
build-minSizeRel/: CMakeCache.txt  Makefile  SemantisedTriangleMesh-test  cmake_install.cmake  install_manifest.txt  qtcsettings.cmake
build-minSizeRel/.cmake/api/v1/reply/: cache-v2-2c4552358ce6e8a2ace9.json  cmakeFiles-v1-a8e31998baf8cc56b468.json  codemodel-v2-cd51929d16d5c908cbd9.json  directory-.-MinSizeRel-ac607f42b66f49c806d3.json  directory-DataStructures-MinSizeRel-b8832547966f22a00548.json  directory-triangle-MinSizeRel-b24f5f5328614f6012f5.json  index-2023-09-06T15-29-35-0870.json  target-DataStructures-lib-MinSizeRel-fd66b47b9919f39575fb.json  target-SemantisedTriangleMesh-MinSizeRel-1d85317d0d4ac6a7c15b.json  target-SemantisedTriangleMesh-test-MinSizeRel-b9578ecb1fdce3b1acfc.json  target-Triangle-lib-MinSizeRel-99c98e90f8f50ee51f76.json  target-testGraph-MinSizeRel-f8dc58c2a570da263e4a.json  target-testTree-MinSizeRel-ddf7961041120d6923a1.json
build-minSizeRel/.qtc_clangd/: compile_commands.json
build-minSizeRel/.qtc_clangd/.cache/clangd/index/: AlignedBox.h.9E3C63223E0F4848.idx  AngleAxis.h.4069E6D2303937FB.idx  Array.h.4F666A44B3DBB24A.idx  ArrayBase.h.CEC32000BC9A886A.idx  ArrayCwiseBinaryOps.h.3A6BBA1F4191FFA0.idx  ArrayCwiseUnaryOps.h.52951B61FB0397A3.idx  ArrayWrapper.h.97E096AF61A7AFC9.idx  Assign.h.4A4683162FD4A88D.idx  AssignEvaluator.h.FC146FDCBE36DA7C.idx  AssignmentFunctors.h.F93C5455326DADFE.idx  BDCSVD.h.428FBBEA6E37CC0A.idx  BandMatrix.h.77376ADE9156DFCB.idx  BinaryFunctors.h.620380B1A21BA157.idx  BlasUtil.h.2CF835411C244E86.idx  Block.h.0B3E80ED868AD8A0.idx  BlockHouseholder.h.B8713A02EAE9C96B.idx  BlockMethods.h.11E843E0A49E01EE.idx  BooleanRedux.h.11946A59AF73C4E7.idx  Cholesky.741239588F15183A.idx  ColPivHouseholderQR.h.C3C959FBF4BC8F5C.idx  CommaInitializer.h.316356D0B12F84CA.idx  CommonCwiseBinaryOps.h.BD654777A1B022CD.idx  CommonCwiseUnaryOps.h.C71FC7C3FC9AC9DA.idx  CommonDefinitions.hpp.B1773B68AD325A43.idx  CompleteOrthogonalDecomposition.h.1CD08704B75ABE6F.idx  Complex.h.5DBF6DE1F2C563BB.idx  Complex.h.985460DC33487FA9.idx  ComplexEigenSolver.h.8606FA2FFA419CD0.idx  ComplexSchur.h.9785EB5EF2E4F0F8.idx  ConditionEstimator.h.2DD727147151F878.idx  ConjHelper.h.B0125C34EB9AC310.idx  Constants.h.E616BFD39C094C82.idx  Core.A2F68E0B79C561C3.idx  CoreEvaluators.h.BD1B0AAB956992DA.idx  CoreIterators.h.4766F0C58737C40B.idx  CwiseBinaryOp.h.CF8F41678B8A999B.idx  CwiseNullaryOp.h.674B1B65BF30D3E9.idx  CwiseTernaryOp.h.ED47DDF31B8A46B8.idx  CwiseUnaryOp.h.71B3BD8E613517F2.idx  CwiseUnaryView.h.2C006D1EE9961AAF.idx  (+249 more)
build-minSizeRel/DataStructures/: Makefile  cmake_install.cmake  testGraph  testTree
build-minSizeRel/pkg/: semantisedtrianglemesh-config.cmake
build-minSizeRel/triangle/: Makefile  cmake_install.cmake
doc/: Doxyfile.in
include/: CommonDefinitions.h  CommonDefinitions.hpp  Edge.h  Edge.hpp  Point.h  Point.hpp  Triangle.h  Triangle.hpp  TriangleMesh.h  TriangleMesh.hpp  Vertex.h  Vertex.hpp  annotation.h  annotation.hpp  annotationfilemanager.hpp  attribute.hpp  boundingmeasure.hpp  euclideanmeasure.hpp  facet.h  facet.hpp  geodesicmeasure.hpp  geometricattribute.h  geometricattribute.hpp  lineannotation.h  lineannotation.hpp  pointannotation.h  pointannotation.hpp  quadtree.h  quadtree.hpp  relationship.hpp  semanticattribute.hpp  semanticsfilemanager.hpp  surfaceannotation.h  surfaceannotation.hpp  trianglemesh (1).h  utils.hpp
pkg/: semantisedtrianglemesh-config.cmake.in
src/: Edge.cpp  Point.cpp  Triangle.cpp  TriangleMesh.cpp  Vertex.cpp  annotation.cpp  annotationfilemanager.cpp  attribute.cpp  boundingmeasure.cpp  euclideanmeasure.cpp  facet.cpp  geodesicmeasure.cpp  geometricattribute.cpp  lineannotation.cpp  pointannotation.cpp  relationship.cpp  semanticattribute.cpp  semanticsfilemanager.cpp  surfaceannotation.cpp
triangle/: CMakeLists.txt  shewchuk_triangle.cpp  shewchuk_triangle.hpp  trianglehelper.cpp  trianglehelper.h  trianglehelper.hpp  trianglehelper1.cpp  trianglehelper1.h  tricall.c
